--- a/templates/index.html
+++ b/templates/index.html
@@ -173,25 +173,22 @@
                 >
                   <i class="bi bi-chat-dots"></i>
                 </button>
+                <button
+                  class="btn btn-paperclip"
+                  id="btn-paperclip"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="top"
+                  data-bs-title="Upload files"
+                >
+                  <i class="bi bi-paperclip"></i>
+                </button>
+                <input
+                  type="file"
+                  class="d-none"
+                  id="fileInput"
+                  accept=".txt"
+                />
               </div>
-              <!-- <button
-                class="btn btn-history"
-                id="btn-history"
-                data-bs-toggle="tooltip"
-                data-bs-placement="top"
-                data-bs-title="History Chat"
-              >
-                <i class="bi bi-clock-history"></i>
-              </button>
-              <button
-                class="btn btn-chat"
-                id="btn-chat"
-                data-bs-toggle="tooltip"
-                data-bs-placement="top"
-                data-bs-title="New Chat"
-              >
-                <i class="bi bi-chat-dots"></i>
-              </button> -->
               <button
                 class="btn"
                 id="sendButton"
